--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "@typescript-eslint/parser": "^5.10.1",
     "asar": "^3.1.0",
     "cross-env": "^7.0.3",
-    "electron": "^16.0.8",
+    "electron": "^19.0.4",
     "electron-builder": "^22.14.13",
     "eslint": "^8.8.0",
     "eslint-plugin-jest": "^26.0.0",
@@ -105,6 +105,7 @@
     "jest": "^27.4.7",
     "npm-run-all": "^4.1.5",
     "parcel": "^2.2.1",
+    "process": "^0.11.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
